# jsonrpc

core/: Cargo.toml
http/: Cargo.toml
http/src/: handler.rs  lib.rs  response.rs  tests.rs  utils.rs
ipc/: Cargo.toml
ipc/src/: lib.rs  server.rs
server-utils/: Cargo.toml
server-utils/src/: cors.rs  lib.rs  reactor.rs  stream_codec.rs
tcp/src/: server.rs  tests.rs
