[package]
description = "Server utils for jsonrpc-core crate."
name = "jsonrpc-server-utils"
version = "8.0.1"
authors = ["tomusdrw <tomasz@parity.io>"]
license = "MIT"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
documentation = "https://paritytech.github.io/jsonrpc/jsonrpc_core/index.html"
homepage = "https://github.com/paritytech/jsonrpc"
repository = "https://github.com/paritytech/jsonrpc"

[dependencies]
globset = "0.4"
log = "0.4"
jsonrpc-core = { version = "8.0", path = "../core" }
tokio = { version = "~0.1.7" }
tokio-codec = { version = "0.1" }
bytes = "0.4"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
